# coreco-recorder

./: .gitignore  LICENSE  README-dev.md  README.md  TODO.md  pyproject.toml  release-win.bat  requirements-dev.txt
.github/workflows/: build.yaml
requirements/: dev.txt  main.txt  prod.txt
src/: coreco.py
src/tools/: loader.py  player.py  project_manager.py  recorder.py
